# salary-management-system

./: .gitignore
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 66a3679b3e96_initial_schema.py  8ae1d8ba0040_create_employees_table.py
backend/app/api/: employees.py
backend/app/controllers/: employee_controller.py  insights_controller.py
backend/app/db/: session.py
backend/app/models/: __init__.py  employee.py
backend/app/repositories/: employee_repository.py  insights_repository.py
backend/app/schemas/: employee.py  insights.py
backend/app/scripts/: seed_employees.py
backend/app/services/: employee_service.py  insights_service.py
backend/models/: employee.py
backend/tests/: conftest.py  test_country_salary_insights.py  test_employee_apis.py  test_employee_schema.py  test_job_title_salary_insights.py
frontend/: jest.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/employees/: page.test.tsx  page.tsx
frontend/components/employees/: employee-table.tsx
frontend/lib/: api.ts
frontend/types/: employee.ts
